[project]
name = "attackerkb-api"
version = "0.0.7"
description = "AttackerKB API Library"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Kev Breen", email = "kevin@techanarchy.net" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/kevthehermit/attackerkb-api"
Repository = "https://github.com/kevthehermit/attackerkb-api"

[project.optional-dependencies]
mcp = [
    "fastmcp>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["attackerkb_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["attackerkb_api"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
